Fix body overflow & select control in edit-task modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,10 @@ html, body, #root {
   height: 100%;
 }
 
+body {
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
 }
